--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,18 +13,34 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "torch==2.2.0", "torchvision==0.17.0",
-    "transformers==4.37.0", "tokenizers==0.15.0", "sentencepiece==0.1.99", "shortuuid",
-    "accelerate==0.23.0", "peft==0.4.0",
-    "pydantic", "markdown2[all]", "numpy==1.26.4", "scikit-learn==1.2.2",
-    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
-    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.9.16",
-    "open_clip_torch", "diffusers[torch]", "torchtext==0.17.0",
-    "ezcolorlog", "gcsfs",
+    "torch>=2,<3",
+    "torchvision>=0,<1",
+    "transformers>=4,<5",
+    "tokenizers>=0,<1",
+    "sentencepiece>=0,<2",
+    "shortuuid",
+    "accelerate>=1,<2",
+    "peft>=0,<1",
+    "pydantic",
+    "markdown2[all]",
+    "numpy>=2,<3",
+    "scikit-learn>=1,<2",
+    "requests",
+    "httpx>=0,<1",
+    "uvicorn",
+    "fastapi",
+    "einops>=0,<1",
+    "einops-exts>=0,1",
+    "timm>=0,<1",
+    "open_clip_torch",
+    "diffusers[torch]",
+    "torchtext>=0,<1",
+    "ezcolorlog",
+    "gcsfs",
 ]
 
 [project.optional-dependencies]
-gpu = ["bitsandbytes==0.41.0", "deepspeed==0.12.6", "ninja", "wandb", "fastapi", "gradio==4.16.0", "gradio_client==0.8.1"]
+gpu = ["bitsandbytes>=0,<1", "deepspeed>=0,<1", "ninja", "wandb", "fastapi", "gradio>=5,<6", "gradio_client>=0,<1"]
 tpu = ["ninja", "wandb"]
 
 [project.urls]
